tests/ui/associated-item/impl-duplicate-methods.stderr
error[E0592]: duplicate definitions with name `orange`
  --> $DIR/impl-duplicate-methods.rs:5:5
   |
LL |     fn orange(&self) {}
   |     ---------------- other definition for `orange`
LL |     fn orange(&self) {}
   |     ^^^^^^^^^^^^^^^^ duplicate definitions for `orange`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0592`.
